# dataloader

./: .editorconfig  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  sonar-project.properties  tox.ini
.github/workflows/: ci.yml
dataloader/: __init__.py  api.py
dataloader/cli/: __init__.py  main.py
dataloader/cli/commands/: __init__.py  cancel.py  dry_run.py  init.py  list.py  resume.py  run.py  state.py  test_connection.py  validate.py
dataloader/connectors/: __init__.py  base.py  registry.py
dataloader/connectors/api/: __init__.py  config.py  connector.py
dataloader/connectors/csv/: __init__.py  config.py  connector.py  source.py
dataloader/connectors/duckdb/: __init__.py  config.py  connector.py  destination.py  type_mapper.py
dataloader/connectors/filestore/: __init__.py  config.py  connector.py  formats.py
dataloader/connectors/postgres/: __init__.py  config.py  connector.py  source.py  type_mapper.py
dataloader/connectors/s3/: __init__.py  config.py  connector.py  destination.py  source.py
dataloader/core/: __init__.py  batch.py  engine.py  exceptions.py  logging.py  metrics.py  parallel.py  schema.py  state.py  state_backend.py  type_mapping.py
dataloader/core/schema/: __init__.py  contracts.py  evolution.py  inference.py  lineage.py  models.py  registry.py  storage.py  validation.py
dataloader/models/: __init__.py  connector_config.py  destination_config.py  loader.py  merger.py  recipe.py  runtime_config.py  schema_config.py  source_config.py  templates.py  transform_config.py
dataloader/transforms/: __init__.py  add_column.py  cast.py  loader.py  pipeline.py  registry.py  rename.py
examples/open_meteo/: README.md  flatten_data.py  main.py
examples/open_meteo/recipes/: api_to_duckdb.yml  api_to_local.yml  base_open_meteo.yml
examples/recipes/: base_recipe.yaml  child_recipe.yaml  customers.yaml  delete_test.yaml  simple_csv.yaml  test_credentials.yaml  test_recipe.yaml
tests/: README.md  __init__.py  conftest.py
tests/integration/: __init__.py  test_end_to_end.py  test_recipe_loading.py
tests/unit/: __init__.py  test_api_connector.py  test_arrow_batch.py  test_connectors.py  test_destination_config.py  test_destination_connectors.py  test_duckdb_connector.py  test_filestore_local_connector.py  test_filestore_s3_connector.py  test_loader.py  test_merger.py  test_metrics.py  test_parallel.py  test_postgres_connector.py  test_recipe.py  test_runtime_config.py  test_schema.py  test_schema_config.py  test_schema_registry.py  test_source_config.py  test_source_connectors.py  test_state_backends.py  test_templates.py  test_transform_config.py  test_transforms.py  test_type_mappers.py
