[project]
name = "dataloader"
version = "0.0.0b5"
description = "Recipe-driven data loading framework for declarative EL workflows"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "click>=8.0",
    "json-log-formatter>=0.5.0",
    "pyarrow>=14.0",
    "fsspec>=2023.1.0",
]
authors = [
    {name = "DataLoader Contributors"},
]
keywords = ["etl", "data-loading", "data-pipeline", "recipe", "yaml"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
postgres = [
    "psycopg2-binary>=2.9",
    "sqlalchemy>=2.0.0",
    "pandas>=2.0",
]
s3 = [
    "boto3>=1.28",
    "s3fs>=2023.1.0",
]
duckdb = [
    "duckdb>=0.9",
]
api = [
    "requests>=2.28.0",
    "jsonpath-ng>=1.5.0",
]
parquet = [
    "pandas>=2.0",
]
all = [
    "psycopg2-binary>=2.9",
    "sqlalchemy>=2.0.0",
    "pandas>=2.0",
    "boto3>=1.28",
    "s3fs>=2023.1.0",
    "duckdb>=0.9",
    "requests>=2.28.0",
    "jsonpath-ng>=1.5.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "moto>=4.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow running tests",
]

[dependency-groups]
dev = [
    "black>=25.11.0",
    "isort>=6.1.0",
    "mypy>=1.8.0",
    "bandit>=1.7.0",
    "types-PyYAML>=6.0.0",
]

[project.scripts]
dataloader = "dataloader.cli.main:main"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

# Exclude tests and examples
exclude = [
    "tests/",
    "examples/",
    "build/",
    "dist/",
    ".*",
]

# Per-module options for third-party libraries
[[tool.mypy.overrides]]
module = [
    "pyarrow.*",
    "fsspec.*",
    "requests.*",
    "boto3.*",
    "sqlalchemy.*",
    "pandas.*",
    "yaml.*",
    "click.*",
    "json_log_formatter.*",
]
ignore_missing_imports = true

[tool.bandit]
exclude_dirs = ["tests", "examples", "build", "dist", ".venv", "venv"]
skips = ["B101"]  # Skip assert_used test (common in tests)
